Resolves: tdf#92293 gtk3: get a11y working

Change-Id: I89cfde9b4c97852d36817b716ac08bd32096915b